# tennis

./: ball.xm  collada.xm  computer.xm  glimage.xm  glmatrix.xm  glshaders.xm  placement.xm  player.xm  stage.xm  tennis.xm
data/: blue.blend  blue.dae  blue.player  court.dae  draw-court.xm  export-collada  export-collada.py  flip_actions.py  green.blend  green.dae  green.player  import-actions  import-actions.py  import-flip-actions.py  import_actions.py  male.blend  male.dae  male.player  malel.blend  malel.dae  maleld.player  malels.dae  malels.player  malerd.player  malers.dae  malers.player  players  red.blend  red.dae  red.player  yellow.blend  yellow.dae  yellow.player
sdl/: Makefile.am  ball.cc  ball.h  collada.cc  collada.h  computer.cc  computer.h  configure.ac  gears.cc  gl.cc  gl__image.cc  main.cc  main.h  path.cc  path.h  placement.h  player.cc  player.h  portable.cc  portable.h  sdl_core.h  stage.cc  stage.h  test_collada.cc  test_xml_reader.cc  viewer.cc  xml_reader.h
sdl/al/: core.h
sdl/android-project/: AndroidManifest.xml  BUILD  build.xml
sdl/android-project/app/: build.gradle
sdl/android-project/app/jni/: Android.mk  Application.mk
sdl/android-project/app/jni/src/: Android.mk
sdl/android-project/app/jni/xml2/: Android.mk
sdl/android-project/app/src/main/: AndroidManifest.xml
sdl/android-project/app/src/main/res/values/: strings.xml
sdl/android-project/gradle/wrapper/: gradle-wrapper.properties
sdl/android-project/jni/: Application.mk
sdl/android-project/jni/src/: Android.mk
sdl/android-project/res/values/: strings.xml
sdl/android-project/src/io/github/shin1m/: Tennis.java
sdl/android-project/src/io/github/shin1m/tennis/: Activity.java
sdl/android-project/src/org/libsdl/app/: SDLActivity.java
sdl/data/: gamecontrollerdb.txt
sdl/gl/: core.h  image.h  shaders.h
sdl/xanadu/: matrix  transform  tuple  vector
web/: ColladaLoader.js  app.coffee  index.html  package.json  player.coffee  stage.coffee
web/public/: ColladaLoader.js  ball.coffee  computer.coffee  index.html  main.coffee  player.coffee  stage.coffee
